Bug 73907 - [qt][wk2] Tests of QQuickWebView assert in debug builds when destroying QQuickWebViewPrivate
Summary: [qt][wk2] Tests of QQuickWebView assert in debug builds when destroying QQuic...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Michael Brüning
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-06 04:28 PST by Michael Brüning
Modified: 2011-12-06 08:36 PST (History)
3 users (show)

See Also:


Attachments
Patch to fix assertion. (3.12 KB, patch)
2011-12-06 04:45 PST, Michael Brüning
no flags Details | Formatted Diff | Diff
Updated patch using disconnect instead of blockSignals (3.11 KB, patch)
2011-12-06 06:02 PST, Michael Brüning
kenneth: review+
Details | Formatted Diff | Diff
Patch with fixed ChangeLog and commit message. (3.12 KB, patch)
2011-12-06 06:43 PST, Michael Brüning
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Brüning 2011-12-06 04:28:53 PST
The assert happens because the destructor of QQuickWebViewPrivate destroys the interaction engine, which in turn emits a signal that is handled by QQuickWebViewPrivate.
Comment 1 Michael Brüning 2011-12-06 04:45:07 PST
Created attachment 118028 [details]
Patch to fix assertion.
Comment 2 Kenneth Rohde Christiansen 2011-12-06 04:47:58 PST
Comment on attachment 118028 [details]
Patch to fix assertion.

View in context: https://bugs.webkit.org/attachment.cgi?id=118028&action=review

> Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:79
> +{
> +    if (interactionEngine)
> +        interactionEngine->blockSignals(true);
> +}

why not disconnect all signals?
Comment 3 Michael Brüning 2011-12-06 06:02:24 PST
Created attachment 118035 [details]
Updated patch using disconnect instead of blockSignals

Update according to Kenneth's comment.
Comment 4 Michael Brüning 2011-12-06 06:04:23 PST
Comment on attachment 118035 [details]
Updated patch using disconnect instead of blockSignals

Updating flags
Comment 5 Kenneth Rohde Christiansen 2011-12-06 06:34:38 PST
Comment on attachment 118035 [details]
Updated patch using disconnect instead of blockSignals

View in context: https://bugs.webkit.org/attachment.cgi?id=118035&action=review

> Source/WebKit2/ChangeLog:8
> +        * UIProcess/API/qt/qquickwebview.cpp: Block signals from QtViewportInteractionEngine in 

diconnect
Comment 6 Michael Brüning 2011-12-06 06:43:19 PST
Created attachment 118041 [details]
Patch with fixed ChangeLog and commit message.

Fixed the ChangeLog and commit message.
Comment 7 WebKit Review Bot 2011-12-06 08:35:57 PST
Comment on attachment 118041 [details]
Patch with fixed ChangeLog and commit message.

Clearing flags on attachment: 118041

Committed r102142: <http://trac.webkit.org/changeset/102142>
Comment 8 WebKit Review Bot 2011-12-06 08:36:01 PST
All reviewed patches have been landed.  Closing bug.