[qt][wk2] Tests of QQuickWebView assert in debug builds when destroying QQuickWebViewPrivate https://bugs.webkit.org/show_bug.cgi?id=73907

Patch by Michael Brüning <michael.bruning@nokia.com> on 2011-12-06
Reviewed by Kenneth Rohde Christiansen.

* UIProcess/API/qt/qquickwebview.cpp: Disconnect signals from
QtViewportInteractionEngine in ~QQuickWebViewPrivate.
(QQuickWebViewPrivate::~QQuickWebViewPrivate):
* UIProcess/API/qt/qquickwebview_p_p.h: Remove empty inline implementation of ~QQuickWebViewPrivate.

Canonical link: https://commits.webkit.org/90590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102142 268f45cc-cd09-0410-ab3c-d52691b4dbfc